FIX to have a maximum height so as the delivery zone does not get to the page botton in case the screen is very high and the whold list of object is already visible without scroll

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    max-height: 100vh;
 }
 
 .whole-hardware {
